--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -13,6 +13,7 @@
   font-size: 44px;
   line-height: 52px;
   padding-top: 100px;
+  padding-bottom: 80px;
   margin: 0;
 }
 
